logging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: logging
spec:
  rules:
  - host: grafana.deplatform.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: logging
spec:
  ports:
    - port: 80 # the service port
      targetPort: 3000   # The deployment port
      name: http
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
